refactor: PR#17 피드백 반영