@@ -1,7 +1,7 @@
 package com.choistory.config;
 
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.jdbc.DataSourceBuilder;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -9,8 +9,6 @@ import org.springframework.context.annotation.Primary;
 import org.springframework.jdbc.datasource.LazyConnectionDataSourceProxy;
 
 import javax.sql.DataSource;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 @Configuration
@@ -18,48 +16,16 @@ public class MysqlConfig {
     public final String SOURCE_DATASOURCE="sourceDataSource";
     public final String REPLICA_DATASOURCE="replicaDataSource";
 
-    @Value("${spring.datasource.source.hikari.driver-class-name}")
-    private String sourceDriverClassName;
-
-    @Value("${spring.datasource.source.hikari.url}")
-    private String sourceJdbcUrl;
-
-    @Value("${spring.datasource.source.hikari.username}")
-    private String sourceUsername;
-
-    @Value("${spring.datasource.source.hikari.password}")
-    private String sourcePassword;
-
-    @Value("${spring.datasource.replica.hikari.driver-class-name}")
-    private String replicaDriverClassName;
-
-    @Value("${spring.datasource.replica.hikari.url}")
-    private String replicaJdbcUrl;
-
-    @Value("${spring.datasource.replica.hikari.username}")
-    private String replicaUsername;
-
-    @Value("${spring.datasource.replica.hikari.password}")
-    private String replicaPassword;
-
     @Bean(SOURCE_DATASOURCE)
-    public DataSource masterDataSource() {
-        return DataSourceBuilder.create()
-            .driverClassName(sourceDriverClassName)
-            .url(sourceJdbcUrl)
-            .username(sourceUsername)
-            .password(sourcePassword)
-            .build();
+    @ConfigurationProperties(prefix = "spring.datasource.source.hikari")
+    public DataSource sourceDataSource() {
+        return DataSourceBuilder.create().build();
     }
 
     @Bean(REPLICA_DATASOURCE)
-    public DataSource slaveDataSource() {
-        return DataSourceBuilder.create()
-            .driverClassName(replicaDriverClassName)
-            .url(replicaJdbcUrl)
-            .username(replicaUsername)
-            .password(replicaPassword)
-            .build();
+    @ConfigurationProperties(prefix = "spring.datasource.replica.hikari")
+    public DataSource replicaDataSource() {
+        return DataSourceBuilder.create().build();
     }
 
     @Bean
@@ -67,12 +33,7 @@ public class MysqlConfig {
                                         @Qualifier(REPLICA_DATASOURCE) DataSource replicaDataSource) {
 
         RoutingDataSource routingDataSource = new RoutingDataSource();
-
-        Map<Object, Object> dataSourceMap = new HashMap<>();
-        dataSourceMap.put("source", sourceDataSource);
-        dataSourceMap.put("replica", replicaDataSource);
-
-        Map<Object, Object> immutableDataSourceMap = Collections.unmodifiableMap(dataSourceMap);
+        Map<Object, Object> immutableDataSourceMap = Map.of("source", sourceDataSource, "replica", replicaDataSource);
 
         routingDataSource.setTargetDataSources(immutableDataSourceMap);
         routingDataSource.setDefaultTargetDataSource(sourceDataSource);
